add gitignore, server running