@@ -2,93 +2,76 @@ plugins {
     id 'java'
     id 'war'
     id 'application'
-    id "org.jetbrains.kotlin.jvm" version "1.5.21"
+    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
 }
 
-mainClassName = "io.xeros.Server"
+mainClassName = 'io.xeros.Server'
 
-repositories {
-    mavenCentral()
-    maven {
-        name 'm2-dv8tion'
-        url 'https://m2.dv8tion.net/releases'
-    }
-    maven {
-        url 'https://raw.githubusercontent.com/OpenRune/hosting/master'
-    }
+applicationDefaultJvmArgs = [
+    '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+    '--add-opens=java.base/java.nio=ALL-UNNAMED',
+    '-Dio.netty.tryReflectionSetAccessible=true'
+]
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
+tasks.withType(Copy) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
 
 sourceSets {
     main {
-        java {
-            srcDir 'src'
-        }
-        kotlin {
-            srcDir 'srcKotlin'
-        }
-        resources {
-            srcDir 'resources'
-        }
+        java { srcDir 'src/main/java' }
+        kotlin { srcDir 'src/main/java'; exclude 'com/varlamore/**' }
+        resources { srcDir 'resources' }
     }
     test {
-        java {
-            srcDir 'test'
-        }
-        kotlin {
-            srcDir 'testKotlin'
-        }
+        java { srcDir 'test' }
     }
 }
 
-test {
-    useJUnitPlatform()
+repositories {
+    mavenCentral()
+    maven { url 'https://m2.dv8tion.net/releases' }
+    maven { url 'https://raw.githubusercontent.com/OpenRune/hosting/master' }
 }
 
-dependencies {
-    compile fileTree(dir: 'deps', include: ['*.jar'])
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+test { useJUnitPlatform() }
 
+configurations.all { exclude group: 'org.slf4j', module: 'slf4j-simple' }
+
+dependencies {
+    implementation fileTree(dir: 'deps', include: ['*.jar'])
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-
-    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
     implementation 'dev.openrune:filestore:1.2.3'
-    // https://mvnrepository.com/artifact/org.reflections/reflections
-    compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
-
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.6'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.6'
-
-    implementation group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
-
-    implementation group: 'com.github.cage', name: 'cage', version: '1.0'
-
-    // Logging
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
-    // mysql-connector-java
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
-
-    // discord bot
+    implementation 'org.reflections:reflections:0.9.12'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.8.6'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.8.6'
+    implementation 'de.svenkubiak:jBCrypt:0.4.1'
+    implementation 'com.github.cage:cage:1.0'
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'mysql:mysql-connector-java:8.0.25'
     implementation 'net.dv8tion:JDA:4.2.1_253'
-
-    // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.11.0'
-
-    // https://mvnrepository.com/artifact/commons-net/commons-net
-    implementation group: 'commons-net', name: 'commons-net', version: '3.8.0'
-
-    // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
-
-    // https://search.maven.org/artifact/org.jsoup/jsoup/1.14.2/jar
+    implementation 'org.flywaydb:flyway-core:7.11.0'
+    implementation 'commons-net:commons-net:3.8.0'
+    implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'org.jsoup:jsoup:1.14.2'
-
-    // https://mvnrepository.com/artifact/io.netty/netty-all
-    implementation group: 'io.netty', name: 'netty-all', version: '4.1.68.Final'
+    implementation 'io.netty:netty-all:4.1.68.Final'
+    implementation 'org.joda:joda-money:1.0.1'
+    implementation 'joda-time:joda-time:2.12.5'
+    implementation 'com.beust:klaxon:5.6'
+    implementation 'io.github.classgraph:classgraph:4.8.165'
+    implementation 'me.tongfei:progressbar:0.10.0'
+    implementation 'io.github.microutils:kotlin-logging:3.0.5'
 }
 
 distZip {
